--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "shopify-buy": "^2.11.0"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
+    "eslint": "^7.21.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
