--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/styled": "^11.0.0",
     "@react-icons/all-files": "^4.1.0",
     "babel-plugin-react-icons": "^0.1.1",
+    "firebase-cli": "^1.2.0",
     "framer-motion": "^3.6.2",
     "gatsby": "^3.0.0-next.7",
     "gatsby-plugin-gatsby-cloud": "^1.0.1",
@@ -50,6 +51,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.21.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "firebase-tools": "^9.6.1",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
